--- a/Challenge 3/Previsión_Falla.ipynb
+++ b/Challenge 3/Previsión_Falla.ipynb
@@ -40,7 +40,7 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "\n",
     "from datetime import datetime\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.max_columns', None)\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
